--- a/ckanext/tess/templates/node/snippets/staff_for_node.html
+++ b/ckanext/tess/templates/node/snippets/staff_for_node.html
@@ -8,7 +8,7 @@
        <b>Email Address:</b> {{node.get('trc_email')}} <br>
     {% endif %}
     {% if node.get('trc_image') %}
-      <img src="{{ node.get('trc_image') }}" style="max-width:100%">
+      <img src="{{ node.get('trc_image') }}" class="centered-image"><br>
     {% endif %}
     <b>Role:</b> Training Co-ordinator <br>
 <hr>
