--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -354,6 +354,17 @@ hr.style-one {
     float:left;
 }
 
+.centered-image {
+    max-width:80%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top: 10px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+          border-radius: 6px;
+}
+
 .feed {
     border:solid;
     padding: 20px;
