Fix for links to nodes and workflows on the home page.

--- a/ckanext/tess/templates/home/snippets/nodes_button.html
+++ b/ckanext/tess/templates/home/snippets/nodes_button.html
@@ -6,7 +6,7 @@
             <p>
                 TeSS aims to provide an at-a-glance view of <a style="position:relative; z-index: 10;" href="http://elixir-europe.org">ELIXIR</a> training
                 landscape, while also offering individual ’shop windows’, giving customisable views of the hottest
-                <a style="position:relative; z-index: 10;" href="/nodes/index.html">Node</a> news, events, activity highlights, etc.
+                news, events, activity highlights, etc. from <a style="position:relative; z-index: 10;" href="/node">nodes</a>.
             </p>
             <p>
                 For TeSS to offer the functionality you consider most important, please complete the following
