--- a/ckanext/tess/templates/home/snippets/workflows_button.html
+++ b/ckanext/tess/templates/home/snippets/workflows_button.html
@@ -1,6 +1,6 @@
 <div class="module module-button module-narrow module-shallow box homepage-button-div">
     <div class="homepage-button-content">
-        <a href="/workflows"><span class="homepage-button"></span></a>
+        <a href="/workflow"><span class="homepage-button"></span></a>
         <h3 class="heading">{{ _("Workflows") }}</h3>
         <div>
             Visualise ‘workflows’ to identify resources specific to your research and training needs.
