--- a/ckanext/tess/templates/organization/read_base.html
+++ b/ckanext/tess/templates/organization/read_base.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block secondary_content %}
-  {% snippet 'snippets/organization.html', organization=c.group_dict, show_nums=false %}
+  {% snippet 'snippets/organization.html', organization=c.group_dict, show_nums=false, show_cp_node=true %}
 
   {% block organization_facets %}{% endblock %}
 {% endblock %}
