--- a/ckanext/tess/templates/organization/bulk_process.html
+++ b/ckanext/tess/templates/organization/bulk_process.html
@@ -1,15 +1,19 @@
 {% extends "organization/edit_base.html" %}
 
-{% block subtitle %}{{ _('Edit training materials') }} - {{ super() }}{% endblock %}
-
-{% block page_primary_action %}
-  {% link_for _('Add training material'), controller='package', action='new', group=c.group_dict.id, class_='btn btn-primary', icon='plus-sign-alt' %}
-{% endblock %}
+{% set organization = c.group_dict %}
 
 {% block primary_content_inner %}
-  <div class="clearfix">
+      {% block search_form %}
+          {% set sorting = [
+            (_('Name Ascending'), 'title_string asc'),
+            (_('Name Descending'), 'title_string desc'),
+            (_('Last Modified'), 'data_modified desc') ]
+          %}
+          {% snippet 'snippets/search_form.html', type='dataset', query=c.q, sorting=sorting, sorting_selected=c.sort_by_selected, no_title=true, search_class=' ' %}
+        {% endblock %}
+  <div class="clearfix" style="width:100%">
     <h1 class="hide-heading">{{ _('Edit training materials') }}</h1>
-    <div class="primary">
+
       <h3 class="page-heading">
         {% block page_heading %}
           {%- if c.page.item_count -%}
@@ -32,16 +36,15 @@
               <thead>
                 <tr>
                   <th></th>
-                    {% if organization_node %}<th>Node</th>{% endif %}
+                    {% if organization_node %}<th style="text-align: center; vertical-align: middle">Node</th>{% endif %}
                     <th class="table-actions">
-
+                    <div class="btn-group">
                       {% if organization_node %}
                         <button name="bulk_action.node_assign" value="{{organization_node.name}}" class="btn" type="submit">
                             <i class="icon-elixir"></i>
-                            {{ _('Assign Training Materials to %s' % organization_node.display_name) }}
+                            {{ _('Assign to %s' % organization_node.display_name) }}
                         </button>
                       {% endif %}
-                        <div class="btn-group">
                       <button name="bulk_action.public" value="public" class="btn" type="submit">
                         <i class="icon-eye-open"></i>
                         {{ _('Make public') }}
@@ -74,7 +77,7 @@
                       {% if organization_node %}<td style="text-align: center; vertical-align: middle">
                         {% if node %}
                             {% if node==organization_node %}<b>{% endif %}
-                                {{ node.country_code }}
+                                {{ node.display_name }}
                             {% if node==organization_node %}</b>{% endif %}
                         {% endif %}
                             </td>
@@ -107,26 +110,14 @@
           <p class="empty">{{ _('This content provider has no training materials associated to it') }}</p>
         {% endif %}
       {% endblock %}
-    </div>
-      <aside class="tertiary" style="margin-left:0">
-      {% block tertiary_content %}
 
-        {% block search_form %}
-          {% set sorting = [
-            (_('Name Ascending'), 'title_string asc'),
-            (_('Name Descending'), 'title_string desc'),
-            (_('Last Modified'), 'data_modified desc') ]
-          %}
-          {% snippet 'snippets/search_form.html', type='dataset', query=c.q, sorting=sorting, sorting_selected=c.sort_by_selected, no_title=true, search_class=' ' %}
-          <br>
-        {% endblock %}
+  </div>
+  {{ c.page.pager() }}
+{% endblock %}
 
+{% block secondary_content %}
         {#{% snippet 'snippets/simple_search.html', q=c.q, sort=c.sort_by_selected, placeholder=_('Search training materials...'), extra_sort=[(_('Last Modified'), 'data_modified asc')], input_class='search-normal', form_class='search-aside' %}#}
         {% for facet in c.facet_titles %}
           {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet, extras={'id':c.group_dict.id}) }}
         {% endfor %}
-      {% endblock %}
-    </aside>
-  </div>
-  {{ c.page.pager() }}
 {% endblock %}
