--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -148,7 +148,8 @@ body {
   margin-bottom: 10px;
 }
 .dataset-content {
-    max-width: 80%;
+    max-width: 85%;
+    min-height: 70px;
     display: inline-block;
 }
 
@@ -159,9 +160,10 @@ body {
 }
 
 .dataset-node-icon {
-    color: white;
-    height: 40%;
-    background-color: #F8761F;
+    color: darkorange;
+    height: 35px;
+    max-width: 10%
+    background-color: white;
     padding: 5px;
 }
 
@@ -170,7 +172,7 @@ body {
     display: inline;
     float: right;
     height: 35px;
-    width: 20%;
+    width: 10%;
     margin: auto;
 }
 
