Added training co-ordinators section to about page

--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -148,6 +148,8 @@
             Please note that the TeSS at present is in pre-alpha state (as of 21th January 2015). Our first official alpha release is scheduled for the 30th March 2015.
         </p>
         {% endtrans %}
+        <a name="about"></a><h2>{{ _('Training Coordinators') }}</h2>
+        {% snippet "home/snippets/training_coordinators.html", training_coordinators=h.training_coordinators() %}
         {% endif %}
         {% endblock %}
     </section>
