--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -159,6 +159,10 @@ body {
     margin-bottom: 5px;
 }
 
+.node-banner {
+    min-width: 100%;
+    max-height: 300px;
+}
 .dataset-node-icon {
     color: darkorange;
     height: 35px;
@@ -174,6 +178,11 @@ body {
     height: 35px;
     width: 10%;
     margin: auto;
+}
+
+.trc-info {
+    margin: 50px
+
 }
 
 .dataset-heading {
