--- a/ckanext/tess/templates/node/snippets/heading_for_node.html
+++ b/ckanext/tess/templates/node/snippets/heading_for_node.html
@@ -22,11 +22,11 @@
                     </ol>
                     <!-- Carousel items -->
 
-                    <div class="carousel-inner" style="max-height:300px">
-                        <div class="active item"><img src="{{carousel[0]}}" style="min-width:100%"/></div>
+                    <div class="carousel-inner node-banner">
+                        <div class="active item node-banner"><img src="{{carousel[0]}}"/></div>
                         {% for image in carousel %}
                             {% if image != carousel[0] %} {# ignore first #}
-                                <div class="item"><img src="{{image}}" style="min-width:100%"/></div>
+                                <div class="item node-banner"><img src="{{image}}"/></div>
                             {% endif %}
                         {% endfor %}
                     </div>
@@ -39,7 +39,7 @@
     {% else %}
         <div class="row-fluid">
             <div class="span12">
-                <div class="item"><img src="{{carousel[0] }}" style="min-width:100%"/></div>
+                <div class="item node-banner"><img src="{{carousel[0] }}"/></div>
             </div>
         </div>
     {% endif %}
