--- a/ckanext/tess/templates/node/index.html
+++ b/ckanext/tess/templates/node/index.html
@@ -9,9 +9,9 @@
 {% block page_header %}{% endblock %}
 
 {% block page_primary_action %}
-  {#% if h.check_access('node_create') %#}
+  {% if h.check_access('group_create') %}
     {% link_for _('Add node'), controller='ckanext.tess.node:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
-  {#% endif %#}
+  {% endif %}
 {% endblock %}
 
 {% block primary_content_inner %}
