--- a/ckanext/tess/templates/node/snippets/heading_for_node.html
+++ b/ckanext/tess/templates/node/snippets/heading_for_node.html
@@ -1,12 +1,4 @@
-{% if node.get('description'): %}
-<div class="row-fluid" style="padding:20px 20px 0px 20px;">
-    {{ node.get('description') }}
-</div>
-{% endif %}
-
-
 {% set carousel_images = h.carousel_images_of_node(node) %}
-
 {% if carousel_images %}
     {% set count = carousel_images.get('length') %}
     {% set carousel = carousel_images.get('carousel') %}
@@ -36,11 +28,17 @@
                 </div>
             </div>
         </div>
-    {% else %}
+    {% elif count == 1 %}
         <div class="row-fluid">
             <div class="span12">
-                <div class="item node-banner"><img src="{{carousel[0] }}"/></div>
+                <div class="item node-banner"><img src="{{ carousel[0] }}"/></div>
             </div>
         </div>
     {% endif %}
+{% endif %}
+
+{% if node.get('description'): %}
+<div class="row-fluid" style="padding:20px 20px 0px 20px;">
+    {{ node.get('description') }}
+</div>
 {% endif %}
