--- a/ckanext/tess/templates/organization/bulk_process.html
+++ b/ckanext/tess/templates/organization/bulk_process.html
@@ -9,7 +9,7 @@
             (_('Name Descending'), 'title_string desc'),
             (_('Last Modified'), 'data_modified desc') ]
           %}
-          {% snippet 'snippets/search_form.html', type='dataset', query=c.q, sorting=sorting, sorting_selected=c.sort_by_selected, no_title=true, search_class=' ' %}
+          {% snippet 'snippets/search_form.html', type='dataset', query=c.q, sorting=sorting, sorting_selected=c.sort_by_selected, no_title=true, search_class=' ', no_bottom_border = True %}
         {% endblock %}
   <div class="clearfix" style="width:100%">
     <h1 class="hide-heading">{{ _('Edit training materials') }}</h1>
@@ -36,12 +36,11 @@
               <thead>
                 <tr>
                   <th></th>
-                    {% if organization_node %}<th style="text-align: center; vertical-align: middle">Node</th>{% endif %}
+                    {% if organization_node %}<th style="text-align: center; vertical-align: middle">ELIXIR Node</th>{% endif %}
                     <th class="table-actions">
                     <div class="btn-group">
                       {% if organization_node %}
                         <button name="bulk_action.node_assign" value="{{organization_node.name}}" class="btn" type="submit">
-                            <i class="icon-elixir"></i>
                             {{ _('Assign to %s' % organization_node.display_name) }}
                         </button>
                       {% endif %}
@@ -74,7 +73,7 @@
                     <td style="vertical-align: middle">
                       <input type="checkbox" name="dataset_{{ package.id }}" value="{{ node.name }}">
                     </td>
-                      {% if organization_node %}<td style="text-align: center; vertical-align: middle">
+                      {% if organization_node %}<td style="text-align: center;">
                         {% if node %}
                             {% if node==organization_node %}<b>{% endif %}
                                 {{ node.display_name }}
