Removed the exact number of nodes in nodes' index right-hand aside.

--- a/ckanext/tess/templates/node/snippets/helper.html
+++ b/ckanext/tess/templates/node/snippets/helper.html
@@ -7,7 +7,7 @@
     <div class="module-content">
         <p>
             ELIXIR is a pan-European research infrastructure.
-            It consists of <a href="/node/custom/hub.html">the Hub</a>, and {{c.page.item_count}} ELIXIR nodes.
+            It consists of <a href="/node/custom/hub.html">the Hub</a>, and a number of ELIXIR nodes.
         </p>
         <p>
             Select a node to find out more about the training materials, events, news, staff, and institutions
