Fixed nodes links on home page.

--- a/ckanext/tess/templates/home/snippets/nodes_button.html
+++ b/ckanext/tess/templates/home/snippets/nodes_button.html
@@ -1,6 +1,6 @@
 <div class="module module-nodes module-narrow module-shallow box homepage-button-div" style="border: 1px solid #CECECE; padding: 0px;">
     <div class="homepage-button-content">
-    <a href="/nodes"><span class="homepage-button"></span></a>
+    <a href="/node"><span class="homepage-button"></span></a>
         <h2 class="heading">{{ _("ELIXIR Nodes") }}</h2>
         <div>
             <p>
