--- a/ckanext/tess/templates/home/snippets/promoted.html
+++ b/ckanext/tess/templates/home/snippets/promoted.html
@@ -9,12 +9,12 @@
       <p>
         {% trans %}
           <a href="http://elixir-europe.org">ELIXIR's</a> TeSS (Training eSupport System) is a portal for disseminating, discovering
-          and packaging training resources, aggregating information from <a href="/nodes/index.html">ELIXIR Nodes</a> and 3rd-party providers.
+          and packaging training resources, aggregating information from <a href="/node">ELIXIR Nodes</a> and 3rd-party providers.
         {% endtrans %}
       </p>
       <p>
         {% trans %}
-          The platform acts as a ‘department store’, where its ‘departments’ (<a href="/nodes/index.html">ELIXIR Nodes</a>)
+          The platform acts as a ‘department store’, where its ‘departments’ (<a href="/node">ELIXIR Nodes</a>)
           promote their latest news and events, and contribute to its catalogue of training materials.
           The catalogue may be navigated via ‘workflows’ or relevant materials collected into bespoke training ‘packages’.
           {% endtrans %}
