--- a/ckanext/tess/templates/organization/bulk_process.html
+++ b/ckanext/tess/templates/organization/bulk_process.html
@@ -41,8 +41,7 @@
                     <div class="btn-group">
                       {% if organization_node %}
                         <button name="bulk_action.node_assign" value="{{organization_node.name}}" class="btn" type="submit">
-                            <i class="icon-elixir"></i>
-                            {{ _('Assign to node') }}
+                            {{ _('Assign to %s' % organization_node.display_name) }}
                         </button>
                       {% endif %}
                       <button name="bulk_action.public" value="public" class="btn" type="submit">
