Fix for node's description overflowing.

--- a/ckanext/tess/templates/node/snippets/heading_for_node.html
+++ b/ckanext/tess/templates/node/snippets/heading_for_node.html
@@ -38,7 +38,9 @@
 {% endif %}
 
 {% if node.get('description'): %}
-<div class="row-fluid" style="padding:20px 20px 0px 20px;">
+<div class="row-fluid">
+    <div style="padding:20px 20px 0px 20px;">
     {{ node.get('description') }}
+    </div>
 </div>
 {% endif %}
