Added a wee bit of formatting to related events

--- a/ckanext/tess/templates/package/snippets/resources_list.html
+++ b/ckanext/tess/templates/package/snippets/resources_list.html
@@ -31,9 +31,8 @@ Example:
     {% endif %}
 
     {% set events = h.related_events(pkg) %}
-
-    <b>URL</b>: {{ events[0]}}<br>
-    <b>Results</b>: {{ events[1]}}
+    <b>URL</b> = {{ events[0] }}
+    {% snippet "snippets/related_events.html", events=h.related_events(pkg)[1] %}
 
     {% endblock %}
 </section>
