Ignore missing parameter to events method

--- a/ckanext/tess/templates/events.html
+++ b/ckanext/tess/templates/events.html
@@ -17,7 +17,7 @@
                 <a target="_blank" href="http://iann.pro"><img alt="iAnn" src="/images/iann_logo-32x30.png"/></a>
             </p>
             <p>
-                {% snippet "snippets/events.html", events=h.events(None) %}
+                {% snippet "snippets/events.html", events=h.events() %}
             </p>
             <!--p class="more-link"><a target="_blank" href="http://mygoblet.org/iannviewer">More events from iAnn</a></p-->
             <hr/>
